# OpenStudClient

./: .coderabbit.yaml  .gitignore  CMakeLists.txt  Cargo.toml  README.md  cmake_install.cmake
.github/: labeler.yml
.github/workflows/: prReview.yml  summary.yml
src/: OpenStud.cpp  brokenFile.php  main.rs
